--- a/亿级流量系统多级缓存架构七.md
+++ b/亿级流量系统多级缓存架构七.md
@@ -136,7 +136,60 @@ Non-2xx responses:      146
 - 令牌桶是按照固定速率从桶里拿令牌消费，处理完了之后把令牌还回来，如果令牌为0，则拒绝新请求
 - 漏桶是按照固定速率流出请求，流入速率不控制，当桶内请求达到阈值，新请求则被拒绝。
 - 令牌桶支持每次拿多个令牌，平均流入速率，并支持突发流入，还可以支持缓慢提升流入速度
+- 时间间隔和令牌个数都是速率的限制
+```
+http {
+    limit_req_zone $binary_remote_addr zone=addr:10m rate=1r/s; #多长时间能拿一个牌子，跟信号量很像
+    limit_conn_statu 503;
+    limit_conn_log_level error;
+    server {
+        location /limit {
+            limit_req zone=addr burst=5 nodelay; #burst是令牌桶的大小
+        }
+    }
+}
+```
+$binary_remote_addr表示不同的主机有不同的令牌桶或者说是针对于IP做桶上的限制  
+burst > 0 且没有配置nodelay，桶满了就限流，返回错误；没满则按照固定的速率处理，这是正常的情况  
+burst > 0 且配置了nodelay，则不会按照固定的速率处理，上面的rate=1r/s已经不重要了。请求太多的情况下，一旦有用完了还回来的令牌，则立刻给下一个请求，这样为了避免网页变慢。如果桶满了则直接返回错误  
+对于大多数的部署，我们推荐在limit_req指令中包含burst和nodelay参数。  
+https://www.nginx.com/blog/rate-limiting-nginx/  
 
+进行测试得到：
+```
+Complete requests:      150
+Failed requests:        144
+...
+Write errors:           0
+Non-2xx responses:      144
+```
+查看log：
+```
+[root@localhost nginx]# tail /usr/local/openresty/nginx/logs/error.log 
+2020/05/22 00:30:58 [error] 2642#2642: *150 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *151 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *152 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *153 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *154 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *155 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *156 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *157 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *158 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/22 00:30:58 [error] 2642#2642: *159 limiting requests, excess: 5.986 by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+```
+```
+[root@localhost nginx]# tail /usr/local/openresty/nginx/logs/access.log 
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+```
 #### 并发限流
 
 设置系统阈值总的qps个数
