--- a/亿级流量系统多级缓存架构七.md
+++ b/亿级流量系统多级缓存架构七.md
@@ -190,6 +190,8 @@ Non-2xx responses:      144
 127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
 127.0.0.1 - - [22/May/2020:00:30:58 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
 ```
+更加系力度的控制限流：https://github.com/openresty/lua-resty-limit-traffic
+
 #### 并发限流
 
 设置系统阈值总的qps个数
