--- a/亿级流量系统多级缓存架构七.md
+++ b/亿级流量系统多级缓存架构七.md
@@ -139,7 +139,11 @@ Non-2xx responses:      146
 - 时间间隔和令牌个数都是速率的限制
 ```
 http {
-    limit_req_zone $binary_remote_addr zone=addr:10m rate=1r/s; #多长时间能拿一个牌子，跟信号量很像
+    limit_req_zone $binary_remote_addr zone=addr:10m rate=1r/s; #多长时间能拿一个牌子，跟信号量很像 
+                                                                # The limit_req_zone directive defines the parameters for rate limiting while limit_req enables rate limiting within the context where it appears
+                                                                # Key（$binary_remote_addr） – Defines the request characteristic against which the limit is applied
+                                                                # Zone – Defines the shared memory zone used to store the state of each IP address and how often it has accessed a request‑limited URL. 
+                                                                # Rate – Sets the maximum request rate.
     limit_conn_statu 503;
     limit_conn_log_level error;
     server {
@@ -152,7 +156,7 @@ http {
 $binary_remote_addr表示不同的主机有不同的令牌桶或者说是针对于IP做桶上的限制  
 burst > 0 且没有配置nodelay，桶满了就限流，返回错误；没满则按照固定的速率处理，这是正常的情况  
 burst > 0 且配置了nodelay，则不会按照固定的速率处理，上面的rate=1r/s已经不重要了。请求太多的情况下，一旦有用完了还回来的令牌，则立刻给下一个请求，这样为了避免网页变慢。如果桶满了则直接返回错误  
-对于大多数的部署，我们推荐在limit_req指令中包含burst和nodelay参数。  
+对于大多数的部署，我们推荐在limit_req指令中包含burst和nodelay参数。令牌桶除了桶，还有个队列burst，有nodelay的话，在并发高峰时，有令牌就不按照固定的速率执行了，直接消耗光所有的令牌  
 https://www.nginx.com/blog/rate-limiting-nginx/  
 
 进行测试得到：
