--- a/亿级流量系统多级缓存架构七.md
+++ b/亿级流量系统多级缓存架构七.md
@@ -196,6 +196,57 @@ Non-2xx responses:      144
 ```
 更加系力度的控制限流：https://github.com/openresty/lua-resty-limit-traffic
 
+
+**注**  
+AB压力测试工具也可以测任意一个网址，只是无法查阅log，但可以给出测试报告：
+```
+[root@localhost conf]# ab -n 150 -c 50 http://www.google.com/
+This is ApacheBench, Version 2.3 <$Revision: 1430300 $>
+Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
+Licensed to The Apache Software Foundation, http://www.apache.org/
+
+Benchmarking www.google.com (be patient).....done
+
+
+Server Software:        gws
+Server Hostname:        www.google.com
+Server Port:            80
+
+Document Path:          /
+Document Length:        12034 bytes
+
+Concurrency Level:      50
+Time taken for tests:   6.746 seconds
+Complete requests:      150
+Failed requests:        149
+   (Connect: 0, Receive: 0, Length: 149, Exceptions: 0)
+Write errors:           0
+Total transferred:      1911830 bytes
+HTML transferred:       1806230 bytes
+Requests per second:    22.23 [#/sec] (mean)
+Time per request:       2248.760 [ms] (mean)
+Time per request:       44.975 [ms] (mean, across all concurrent requests)
+Transfer rate:          276.75 [Kbytes/sec] received
+
+Connection Times (ms)
+              min  mean[+/-sd] median   max
+Connect:       45  189 197.1    143    1178
+Processing:   123 1529 976.1   1341    6190
+Waiting:       91  480 656.3    228    6083
+Total:        168 1718 996.4   1523    6286
+
+Percentage of the requests served within a certain time (ms)
+  50%   1523
+  66%   1813
+  75%   2236
+  80%   2308
+  90%   3103
+  95%   3710
+  98%   4609
+  99%   5158
+ 100%   6286 (longest request)
+```
+
 #### 并发限流
 
 设置系统阈值总的qps个数
