--- a/亿级流量系统多级缓存架构十-分布式事务.md
+++ b/亿级流量系统多级缓存架构十-分布式事务.md
@@ -98,7 +98,11 @@ base通过允许损失部分可用性来提高数据最终一致性
 - 准备，预提交，先检查一下，在数据库层面和应用层，会包含业务逻辑，执行一次检查，检查整套事务走一遍能不能够成功，不能的话就不用真的提交了
 - 提交，很多商用数据库是支持的，但是MySQL不支持。弄一个第三方的业务组件或者技术框架，去检查能不能提交事务成功，能成功的话，反馈回去，
   或者从他这里就直接提交了。提供强一致性，如果有一个失败了，全部都回滚。中间节点负责一致性的协调
-  这有几个问题：1. 中间的这个服务或者组件挂了（做高可用的话技术架构会更复杂）。2. 中间节点做回滚的时候失败。3. 检测的时候有人搞了数据
+  这有几个问题：1. 中间的这个服务或者组件挂了（做高可用的话技术架构会更复杂, 事务的信息要传播到备用节点）。2. 中间节点做回滚的时候失败。
+              3. 检测的时候有人改了数据。 4. 并发会产生同步等待，检查一张表的修改可不可行的时候，这张表一旦返回得慢了，就要阻塞等待。
+              等待时间这么长，就不太可能保证这个数据不被别人动。5. 被检查端单节点故障
+  这些问题都可能造成数据不一致：前面两个表改了，后面没改。解决这种问题最简单的方式是记日志。只能让提交方记日志，因为数据库那边可能网络就
+  不通。中间有个预提交就避免了一次提交不成功还得分别回滚
 
 角色: 
 
