--- a/亿级流量系统多级缓存架构十-分布式事务.md
+++ b/亿级流量系统多级缓存架构十-分布式事务.md
@@ -91,6 +91,8 @@ base通过允许损失部分可用性来提高数据最终一致性
 
 ![img](../../../Downloads/InternetArchitect-master/12%20亿级流量多级缓存高并发系统架构实战/images/8af234a0-6ed1-11e9-9f49-6f4505f5df5e)
 
+举这么一个案例：一个点上的系统中，要生成订单就必须 1. 查、改库存 2. 联系物流 3. 生成订单。 有一个环节出问题则整个事务就失败
+
 二阶段提交协议可以保证数据强一致性
 
 二阶段
@@ -103,6 +105,19 @@ base通过允许损失部分可用性来提高数据最终一致性
               等待时间这么长，就不太可能保证这个数据不被别人动。5. 被检查端单节点故障
   这些问题都可能造成数据不一致：前面两个表改了，后面没改。解决这种问题最简单的方式是记日志。只能让提交方记日志，因为数据库那边可能网络就
   不通。中间有个预提交就避免了一次提交不成功还得分别回滚
+  
+##### 两阶段提交的意义
+没有中间这个框架或者服务的话，想完成这个事务就必须区分比访问三个数据库或者三个服务。事务是多件事组成的，三个查询是串行执行，一个人在改
+一个数据库中的数据的时候，别人不能改，得让别人知道有人在改，有个中间的服务或者框架统计。独立出的这个服务，标记出三张表中的三条要求改的记录，
+别人这会儿谁也不能改了（事务的隔离特性）。需要一个"第三方"去记录什么东西将要被修改，他就相当于一个分布式锁。  
+
+记录好了之后也不是直接去commit创建订单等请求，得先看一下各个步骤能不能成功，这需要做预创建，数据库原声可以做这个（redolog/undolog），
+也可以写代码的方式预创建，被create的记录里多加一个status，初始标识为"creating"，同样道理另外两个数据库也是同样方式创建，如果全都成功，
+"第三方"收到反馈，说没问题，预创建记录创建成功（但此时不生效），接下来就真的commit，把creating改成done。如果失败，则把这个status记作：
+"avoid"，然后定期把这些记录转移到日志表里面，或者直接记到日志文件之后再把它从这个表里删除（业务系统里很少直接删记录，自增ID非常不重要）
+
+二阶段提交是一套不完善的解决方案，但是他能够给我们提供一套强一致性的解决方案。分布式事务里的回滚不一定是删记录，不要把这里的事物跟数据库的
+事务强一致性的ACID混为一谈，效果能达到就行，真正数据库一样的ACID的强一致性分布式系统是做不到的，只有单节点才能做得到
 
 角色: 
 
@@ -132,11 +147,16 @@ base通过允许损失部分可用性来提高数据最终一致性
 
 数据节点提交变更，无法保证是否真正提交了
 
-二阶段提交存在很多潜在和小概率问题，那么在数据一致性要求高的场景下会造成数据不一致的现象发生，一旦发生数据不一致的情况后，后续人工干预的操作会浪费大量的时间，对银行、余额这类业务，还有可能造成资产流失。
+二阶段提交存在很多潜在和小概率问题，那么在数据一致性要求高的场景下会造成数据不一致的现象发生，一旦发生数据不一致的情况后，后续人工干预的操作
+会浪费大量的时间，对银行、余额这类业务，还有可能造成资产流失。
 
 #### 三阶段提交协议
 
-三阶段提交是对二阶段提交的改良版本，增加了预备阶段，解决了同步阻塞问题。
+三阶段提交是对二阶段提交的改良版本，增加了预备阶段，在二阶段提交的准备阶段之前增加了网络连接的校验，不同的实现方案对于这个预备的定义不太
+一样，可以去检查一下节点是否存活、网络链接通不通、CPU内存占用率是否过高等。在这一阶段是不会写入数据的。解决了同步阻塞问题。数据库是不支持
+三阶段提交的。
+
+仍然有问题，只是多了一次检查而已。光靠数据库和我们自己的代码是比较麻烦的
 
 
 
@@ -146,9 +166,12 @@ base通过允许损失部分可用性来提高数据最终一致性
 
 **TCC**
 
+TCC解决的不只是数据库，还有在微服务架构下，有很多服务节点，我们想要去跨服务查询别人的数据库，别人可能不同意，那只能去访问对方的API，API
+只给出访问结果。这种形式不走数据库的话TCC也能支持，TCC就是我们手动实现出来的两阶段提交的具体方案
+
 Try
 
-- 尝试
+- 尝试（比如能不能写入数据库表）
 - 完成所有业务检查
 - 隔离预留资源
 
@@ -160,7 +183,9 @@ Confirm
 
 Cancel
 
-- 混滚
+- 回滚
+
+其实就是个两阶段提交，把准备阶段换了个名字而已，然后把两阶段提交的业务更加完善了一下。
 
 主业务
 
