--- a/亿级流量系统多级缓存架构十-分布式事务.md
+++ b/亿级流量系统多级缓存架构十-分布式事务.md
@@ -167,19 +167,28 @@ base通过允许损失部分可用性来提高数据最终一致性
 **TCC**
 
 TCC解决的不只是数据库，还有在微服务架构下，有很多服务节点，我们想要去跨服务查询别人的数据库，别人可能不同意，那只能去访问对方的API，API
-只给出访问结果。这种形式不走数据库的话TCC也能支持，TCC就是我们手动实现出来的两阶段提交的具体方案
+只给出访问结果。这种形式不走数据库的话TCC也能支持，TCC就是我们手动实现出来的两阶段提交的具体方案。有很多的技术框架也实现了TCC
 
 Try
 
-- 尝试（比如能不能写入数据库表）
-- 完成所有业务检查
-- 隔离预留资源
+- 尝试（能不能写入数据库表）
+    - 检查网络
+    - 完成所有业务检查
+    - 隔离预留资源
+
+需要一个小弟来记录谁正在操作那些东西，别人再来的时候要等前面这个人完事儿了才行
 
 Confirm
 
 - 真正的执行业务
 - 使用try阶段预留的资源
-- 幂等
+- 幂等。比如第一次创建订单没创建成功，有个补偿机制，就是Retry，这要限定次数和时间。幂等是接收到相同的请求，效果跟只执行一次是一样的。
+  如何分辨哪个操作需要做幂等，所以TCC需要一个上下文，贯穿整个try、confirm、cancel阶段。try和confirm就不是一个人发起的。TCC模式下，
+  分布式事务是由主线业务发起的（主线业务的service可能要调用其他的服务），他来开启事务，这时候会给想要执行的事务加一个事务ID，这一系列的
+  连锁操作全部标记在一个事务ID里，这是主线业务向TCC框架或者自己的手动实现（大厂自己写）提交这些信息。在做回滚/提交和幂等的时候都可以根据
+  这个事务ID来分辨事务之间的隔离了，比如删除和创建订单有冲突，开启事务的时候还会在TCC框架的"小黑板"上写上（相当于分布式锁，有一个表）有
+  那些资源是隔离的。相同的ID不再处理第二次，这就幂等了。后面的Confirm 和Cancel也是通过这个事务ID和主线业务绑定。TCC提供的功能叫"事务
+  管理器"，主要就是生成事务ID、执行TCC相关的操作。Try操作是主线业务做的
 
 Cancel
 
