--- a/亿级流量系统多级缓存架构十-分布式事务.md
+++ b/亿级流量系统多级缓存架构十-分布式事务.md
@@ -188,7 +188,20 @@ Confirm
   连锁操作全部标记在一个事务ID里，这是主线业务向TCC框架或者自己的手动实现（大厂自己写）提交这些信息。在做回滚/提交和幂等的时候都可以根据
   这个事务ID来分辨事务之间的隔离了，比如删除和创建订单有冲突，开启事务的时候还会在TCC框架的"小黑板"上写上（相当于分布式锁，有一个表）有
   那些资源是隔离的。相同的ID不再处理第二次，这就幂等了。后面的Confirm 和Cancel也是通过这个事务ID和主线业务绑定。TCC提供的功能叫"事务
-  管理器"，主要就是生成事务ID、执行TCC相关的操作。Try操作是主线业务做的
+  管理器"，主要就是生成事务ID、执行TCC相关的操作。Try操作是主线业务做的，比如主线业务调用了service A、B、C，则主线业务先去try，成功之后
+  提交到事务管理框架里，后者记录这些信息，执行下面的操作：生成事务ID，开启分布式事务、上下文、执行Confirm操作。如果前面主业务的try都没有
+  成功，则事务管理框架就不做了，不提交，直接就回滚了。这里的事务管理器跟前面的二阶段提交的区别就是这里多加了很多"补偿机制"：confirm的时候
+  如果出错了，能够cancel掉。二阶段提交的时候如果try成功但是confirm失败的话也不好整，而且也没做到资源隔离。所有confirm都成功，则返回到主
+  业务，则这次分布式事务执行成功；有一个confirm失败，有这么几种补偿机制：1. 重试 2. 消息队列。事务不一定是有多个操作组成的。一个节点往
+  另一个节点（不是数据库）写东西，要求一定要到达：发请求，对方执行，返回结果。不管什么解决方案，网络是无法保证100%联通的，来回的消息都
+  不一定能到达。这可以用消息中间件，往MQ里面去写，然后MQ返回一个ack。对方业务进程中消费MQ中的消息，消费成功之后再给请求发起方一个回馈。
+  这里的问题是往MQ里面写可能没写进去，那就保证最终一致性，往MQ里面没写进去的话，可以在本地的数据库里写或者记录一个log。MQ往消费端投递消息
+  的时候也不一定就成功，所以有个重试次数（MQ里有配置），这时候请求发起短短的DB或者log就起作用了，MQ如果没投递成功的话，通知请求的发起端，
+  重新写一下。或者说这个MQ支持预投递，跑job检查消费端有没有拿到消息，请求的发起端本地DB里有没有这条消息，双缓存保证数据一致性。Job效率有
+  点低，强一致性效率就高不了。定时任务可以用Quarz、xxl-job、Elastic-job，定时再次提交，或者下次访问的时候解决上次的问题（堆积的消息
+  一次性又消费了） 3.定时核对校对（跑Job做审计），比如银行系统每个月都会有几天维护，包括10086，每个月的月初做清算，看数据能不能对上，
+  跑日志校对，他不能实时校对，太影响性能，所以只能每周或者每个月一次，哪些数据错了，找出来，自动更正是很难的。跑Job分析日志的时候就需要
+  大数据分析了。
 
 Cancel
 
