--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -40,8 +40,10 @@ Json数据 }
 ES分布式⽂文档系统 - ES如何实现⾼高可⽤用(⽣生产环境均为⼀一台机器器⼀一个节点)
 ##  ES在分配单个索引的分⽚片时会将每个分⽚片尽可能分配到更更多的节 点上。但是，实际情况取决于集群拥有的分⽚片和索引的数量量以及它们的 ⼤大⼩小，不不⼀一定总是能均匀地分布。
 ##  ES不不允许Primary和它的Replica放在同⼀一个节点中，并且同⼀一个节 点不不接受完全相同的两个Replica
-##  同⼀一个节点允许多个索引的分⽚片同时存在。 - 容错机制
-##  啥叫容错?
+##  同⼀一个节点允许多个索引的分⽚片同时存在。 
+
+## 容错机制
+###  啥叫容错?
 -  傻X的代码你能看懂，⽜牛X的代码你也能看懂
 -  只能看懂⾃自⼰己的代码，容错性低
 -  PS:各种情况(⽀支持的情况越多，容错性越好)下，都能保证 work 正常运⾏行行
