--- a/ES_notes/聚合查询.md
+++ b/ES_notes/聚合查询.md
@@ -1,6 +1,17 @@
 # 聚合查询 DSL
 
-#### 求最高的价格
+GET /product/_mapping
+GET /product/_search?q=date:2020
+GET /product/_doc/5
+
+POST /product/_doc/5/_update
+{
+  "doc" : {
+    "date" :  "2020-06-22"
+  }
+}
+
+# 求最高的价格
 GET /product/_search
 {
   "aggs": {
@@ -12,7 +23,19 @@ GET /product/_search
   }
 }
 
-#### 求各类手机的平均价格
+# 求各类手机的最低价格
+GET /product/_search
+{
+  "aggs": {
+    "min_price": {
+      "min": {
+        "field": "price"
+      }
+    }
+  }
+}
+
+# 求各类手机的平均价格
 GET /product/_search
 {
   "aggs": {
@@ -20,6 +43,29 @@ GET /product/_search
       "avg": {
         "field": "price"
       }
+    }
+  }
+}
+# 各类手机的价格累加
+GET /product/_search
+{
+  "aggs": {
+    "mean_price": {
+      "sum": {
+        "field": "price"
+      }
+    }
+  }
+}
+
+
+
+# 日期为 2020-01-0
+GET /product/_count
+{
+  "query": {
+    "match": {
+      "date": "2020-01-01"
     }
   }
 }
