--- a/ES_notes/聚合查询.md
+++ b/ES_notes/聚合查询.md
@@ -11,7 +11,7 @@ POST /product/_doc/5/_update
   }
 }
 
-# 求最高的价格
+#### 求最高的价格
 GET /product/_search
 {
   "aggs": {
@@ -23,7 +23,7 @@ GET /product/_search
   }
 }
 
-# 求各类手机的最低价格
+#### 求各类手机的最低价格
 GET /product/_search
 {
   "aggs": {
@@ -35,7 +35,7 @@ GET /product/_search
   }
 }
 
-# 求各类手机的平均价格
+#### 求各类手机的平均价格
 GET /product/_search
 {
   "aggs": {
@@ -46,7 +46,7 @@ GET /product/_search
     }
   }
 }
-# 各类手机的价格累加
+#### 各类手机的价格累加
 GET /product/_search
 {
   "aggs": {
@@ -60,7 +60,7 @@ GET /product/_search
 
 
 
-# 日期为 2020-01-0
+#### 日期为 2020-01-0
 GET /product/_count
 {
   "query": {
