--- a/亿级流量系统多级缓存架构十-阿里云实战.md
+++ b/亿级流量系统多级缓存架构十-阿里云实战.md
@@ -13,6 +13,7 @@
 
 
 > 域名可以买卖，当然可以用来赚钱。域名赚钱也不难，买一些域名，有的域名别人没有注册过是可以抢注的。最值钱的是 .com的域名。当我要卖这个域名的时候，假如一年60块钱注册的，注册了5年，那成本就是300，卖的话肯定不能低于300块钱。有闲钱的话可以去投资一些，但现在投资域名也不太赚钱了。因为好的域名大家都知道，想从别人那买它不会便宜，想抢注刚释放的域名很难，因为很多专业的机构也在抢。
+> 短网址系统大体架构：二级域名的时候最前面配置*，*.bjmsb.com然后有个数据库记录*的名称和真是网址的映射，前端来了请求就打给nginx，后者用lua连接为数据库做缓存的Redis，然后把网址和302代码一并返回给客户端
 
 
 
