笔记 张一明老师关于智能DNS和CDN的讲解挺精彩

--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -5,7 +5,16 @@
 ### 流量网关
 
 无上限的增加对流量的承受能力的方法：分区域分机房。只要一个机房的LB（lvs）能够hold得住他所设计的流量，后面就有机会无限加机器。通过域名解析
-（智能DNS）把不同服务商或地区的用户流量分散到不同的机房
+（智能DNS）把不同服务商或地区的用户流量分散到不同的机房. 就是把服务器的压力转化成了域名解析的压力，其实就是没有压力了，首先智能DNS它是一个
+大型的集群，么起每一台服务器上的业务逻辑特别简单，再加上DNS也是个多级缓存的系统，所以性能特别高。注：IP分配的两个维度分别是：1。按提供商
+2。按地区或者城市。还可以通过DNS辨识爬虫，比如是谷歌的、百度的、必应的等等，这样可以把爬虫隔离。用户获得成本比较高就决定了CAP做取舍的时候，
+A就很重要，这是互联网项目的特性
+
+静态资源放在CDN上，index.html放在nginx上，nginx前面是lvs，lvs向多个nginx做负载，nginx直接返回index.html。而index.html中的 <img src="xxx" />
+的时候，就去CDN找资源了，而CDN是全网加速的，不同的区域根据xxx这个域名，和智能DNS，有不同的CDN服务器，提供静态资源的服务。有一个源服务器，这里面的
+数据改了，就向各个CDN服务器同步。在返回index.html之后才用得到CDN服务器。DNS其实是根据服务商和地区做了一层负载，然后才是自己的LB（lvs），用
+LB做流量阈值的设置，比如100万，超过了就要做调整，或者就不能等到了100万再去调整，这就来不及了。如何设置这个阈值呢？可以用漏桶算法、令牌桶算法，但是需要
+一个可编程的运行环境，但是可编程的LB都不是好的LB，他干的事情太多了，lvs怎么做呢？
 
 - 全局性流控
 - 日志统计
