--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -14,7 +14,8 @@ A就很重要，这是互联网项目的特性
 的时候，就去CDN找资源了，而CDN是全网加速的，不同的区域根据xxx这个域名，和智能DNS，有不同的CDN服务器，提供静态资源的服务。有一个源服务器，这里面的
 数据改了，就向各个CDN服务器同步。在返回index.html之后才用得到CDN服务器。DNS其实是根据服务商和地区做了一层负载，然后才是自己的LB（lvs），用
 LB做流量阈值的设置，比如100万，超过了就要做调整，或者就不能等到了100万再去调整，这就来不及了。如何设置这个阈值呢？可以用漏桶算法、令牌桶算法，但是需要
-一个可编程的运行环境，但是可编程的LB都不是好的LB，他干的事情太多了，lvs怎么做呢？
+一个可编程的运行环境，但是可编程的LB都不是好的LB，他干的事情太多了，lvs怎么做呢？lvs大致能抗30万连接，nginx能承受5万连接。这里用nginx代替lvs，
+这么一来，首先，能承受的并发数就降低了；但是index.html还是有必要存在nginx这里，在nginx上再怎么同步速度慢，也比全网分发的CDN块，一致性也会有问题
 
 - 全局性流控
 - 日志统计
