--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -21,6 +21,8 @@ LB做流量阈值的设置，比如100万，超过了就要做调整，或者就
 - 日志统计
 - 防止 SQL 注入
 - 防止 Web 攻击
+  DDOS是三次握手只和服务器握手一次，利用了网络协议的bug，只能靠赢防。CC攻击是不断的去刷我们的URL，真正有完成握手。流量网关屏蔽掉不友好的操作，建立在三次
+  握手之后的。
 - 屏蔽工具扫描
 - 黑白名单控制
 
