--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -21,8 +21,8 @@ LB做流量阈值的设置，比如100万，超过了就要做调整，或者就
 - 日志统计
 - 防止 SQL 注入
 - 防止 Web 攻击
-  DDOS是三次握手只和服务器握手一次，利用了网络协议的bug，只能靠赢防。CC攻击是不断的去刷我们的URL，真正有完成握手。流量网关屏蔽掉不友好的操作，建立在三次
-  握手之后的。
+  DDOS是三次握手只和服务器握手一次，利用了网络协议的bug，只能靠赢防。CC攻击是不断的去刷我们的URL，真正有完成握手，然后不断按下F5。流量网关屏蔽
+  掉不友好的操作，建立在三次握手之后的。
 - 屏蔽工具扫描
 - 黑白名单控制
 
@@ -37,8 +37,8 @@ LB做流量阈值的设置，比如100万，超过了就要做调整，或者就
 
 目前常见的开源网关大致上按照语言分类有如下几类：
 
-- Nginx+lua：Open Resty、Kong、Orange、Abtesting gateway 等
-- Java：Zuul/Zuul2、Spring Cloud Gateway、Kaazing KWG、gravitee、Dromara soul 等
+- Nginx+lua：这一类是性能最好的。Open Resty、Kong、Orange、Abtesting gateway（做灰度发布的） 等
+- Java：Zuul/Zuul2、Spring Cloud Gateway、Kaazing KWG、gravitee、Dromara soul 等。Java写的就慢，不太好放在最前面，服务对服务的网关
 - Go：Janus、fagongzi、Grpc-gateway
 - Dotnet：Ocelot
 - NodeJS：Express Gateway、Micro Gateway
@@ -49,6 +49,8 @@ LB做流量阈值的设置，比如100万，超过了就要做调整，或者就
 - Kong
 - Zuul/Zuul2
 - Spring Cloud Gateway
+
+上传下载的功能最好跟计算的业务分开，能分开就分开
 
 
 
@@ -96,10 +98,11 @@ https://github.com/kong/kong
 **主要有三个组件**
 
 - Kong Server ：基于nginx的服务器，用来接收API请求。
-- Apache Cassandra/PostgreSQL ：用来存储操作数据。
+- Apache Cassandra/PostgreSQL ：用来存储操作数据，主要存储规则和功能。
 - Kong dashboard：官方推荐UI管理工具，当然，也可以使用 restfull 方式 管理admin api。
-
-Kong采用插件机制进行功能定制，插件集（可以是0或N个）在API请求响应循环的生命周期中被执行。插件使用Lua编写，目前已有几个基础功能：HTTP基本认证、密钥认证、CORS（Cross-Origin Resource Sharing，跨域资源共享）、TCP、UDP、文件日志、API请求限流、请求转发以及Nginx监控。
+Kong的8000端口接到连接之后，跑lua脚本，连接数据库，拿到规则然后根据规则执行路由这个动作，具体路由到哪个服务器，是根据规则定的
+Kong采用插件机制进行功能定制，插件集（可以是0或N个）在API请求响应循环的生命周期中被执行。插件使用Lua编写，目前已有几个基础功能：
+HTTP基本认证、密钥认证、CORS（Cross-Origin Resource Sharing，跨域资源共享）、TCP、UDP、文件日志、API请求限流、请求转发以及Nginx监控。
 
 ### 安装
 
@@ -162,6 +165,9 @@ listen_addresses = '*'          # what IP address(es) to listen on;
 port = 5432                             # (change requires restart)
 
 ```
+
+如果改了配置文件，要删除data目录：`rm -rf /var/lib/pgsql9/data` 然后从新初始化：，`/usr/pgsql-12/bin/postgresql-12-setup initdb` 
+然后再运行postgresql服务
 
 ### **创建数据库**
 
