--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -166,7 +166,7 @@ port = 5432                             # (change requires restart)
 
 ```
 
-如果改了配置文件，要删除data目录：`rm -rf /var/lib/pgsql9/data` 然后从新初始化：，`/usr/pgsql-12/bin/postgresql-12-setup initdb` 
+如果要重新初始化，则先要删除data目录：`rm -rf /var/lib/pgsql9/data` 然后从新初始化：，`/usr/pgsql-12/bin/postgresql-12-setup initdb` 
 然后再运行postgresql服务
 
 ### **创建数据库**
