--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -182,8 +182,10 @@ grant all on database kong to kong;
 ### 1.3下载地址
 
 ```
-https://kong.bintray.com/kong-community-edition-rpm/centos/6/
+https://kong.bintray.com/kong-community-edition-rpm/centos/7/
 ```
+
+下载：`kong-community-edition-0.13.1.el7.noarch.rpm`
 
 ### 安装
 
@@ -207,10 +209,17 @@ rpm -ivh kong-community-edition-0.13.1.el6.noarch.rpm
 1.3 kong migrations up
 ```
 
+启动服务之前，最好把Linux的最大文件限制数调整到4096： `ulimit -n 4096`
+
 ### 启动服务
 
 ```
 kong start
+```
+
+```http://192.168.1.10:8000``` 检测是否启动成功，然后如果成功，页面会默认显示
+```
+{"message":"no route and no API found with those values"}
 ```
 
 
