--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -251,6 +251,14 @@ npm install -g kong-dashboard
 kong-dashboard start --kong-url http://localhost:8001
 ```
 
+浏览器查看Dashboard：
+```
+192.168.1.10:8080
+```
+通过他的Service部分的设置可以配置转发的mappings，会把用户输入的，访问kong的url转换成我们所配置的url，且这是个服务器端跳转。不需要重启
+就可以配置中转规则
+
+
 RPM常用命令
 
 **1、安装**
