--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -256,7 +256,14 @@ kong-dashboard start --kong-url http://localhost:8001
 192.168.1.10:8080
 ```
 通过他的Service部分的设置可以配置转发的mappings，会把用户输入的，访问kong的url转换成我们所配置的url，且这是个服务器端跳转。不需要重启
-就可以配置中转规则
+就可以配置中转规则。相当于配置了一个upstream或者proxy_pass。但这里相当于改了nginx.conf文件，但实际上kong是往数据库里记录了各种配置规则.
+在安装kong的机器上登录postgres数据库：
+```
+su - postgres
+-bash-4.2$ psql
+```
+然后
+`\c kong` 切换到kong数据库，然后`select * from services;`查看在dashboard中配置的规则
 
 
 RPM常用命令
