--- a/亿级流量系统多级缓存架构十一 - 网关.md
+++ b/亿级流量系统多级缓存架构十一 - 网关.md
@@ -265,6 +265,14 @@ su - postgres
 然后
 `\c kong` 切换到kong数据库，然后`select * from services;`查看在dashboard中配置的规则
 
+8000端口接受用户访问，8001端口接受
+
+dashboard变更规则的请求（也可以用REST API拿着json来访问，麻烦），具体访问数据库是由Lua脚本完成的，Kong对这部分进行了封装。用户访问8000
+端口的时候，Lua会去读区DB规则，然后返回代理的结果(隧道的方式，因为url可能为任意网址，中间有很多跳，所以肯定不能用直接路由)。这个结果并不是
+实时的去访问数据库的，而是有个lua_shared_dict来做缓存。  
+
+业务复杂度上来的时候可以做： 1.资源和业务线层面的隔离，比如上传图片的业务另开一个业务线。 2.限流，服务熔断降级
+
 
 RPM常用命令
 
