--- a/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
@@ -33,9 +33,32 @@
 不会知道load的内容，document.write更是如此。  
 
 要生成几个文件好？用模版，头尾中间，3个？还是整体就一个？三个的话一旦页面需要有变化所有页面文件都要修改。三个的话，又回到了上面的情况。那怎么办呢？
-可以在nginx这里写三块缓存，需要改的时候只改其中一块，然后每次请求过来都返回都包含着三块的数据
+可以在nginx这里写三块缓存，需要改的时候只改其中一块，然后每次请求过来都返回都包含着三块的数据。
 
-Thymeleaf、Freemarker、还有JFinal（私活神器，干活太快了，还是国人写的，👍）
+可以通过模版引擎渲染出来模版（下面介绍），然后去加载数据，Nginx SSI （小型电商静态网页治理神器）这个技术，可以把本地磁盘上的两个文件include拼接
+一下，在服务端生成一个大文件，三个模版三合一.在nginx.conf的server大括号下面：
+```
+ssi on;
+ssi_silent_errors on;
+ssi_types text/html;
+```
+
+header.html中写头部，body.html写中间的部分，tail.html写footer，这里由于配置了/foo这个 location,所以用tail.html代替footer.html
+再写一个index.html：
+```
+<h1>Welcome to by iPhone 100</h1>
+<!--#include file="header.html" -->
+<!--#include file="body.html" -->
+<!--#include file="tail.html" -->
+```
+其中`<!--#include`各个字符之间不能有空格，file="之间也不能有空格。这样再重启openresty：`service openresty reload`
+然后刷新页面 `http://192.168.1.2` 就能看到把三个文件拼接之后的结果
+
+
+Thymeleaf、Freemarker、还有JFinal（私活神器，干活太快了，还是国人写的，👍）。JFinal的设计理念在2012-2013年的时候是非常非常先进的，其本质是
+mvc+orm和其他的一些组件。她有一个叫Enjoy的模版引擎，他想翻身就指望这个了。Thymeleaf、Freemarker、Velocity渲染的时候底层借助的是javacc：
+语义、词义、词法的解析器，类似于一个编译器。Enjoy没用javacc，但是它的性能要比前几个高5倍左右，纯靠算法战胜的Freemarker和Thymeleaf，而且
+他是咱们国产的框架，而且咱们还可以不用JFinal，只用Enjoy，不需要导入其他无关的依赖
 
 ### 管理后台
 
