--- a/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
@@ -52,13 +52,26 @@ header.html中写头部，body.html写中间的部分，tail.html写footer，这
 <!--#include file="tail.html" -->
 ```
 其中`<!--#include`各个字符之间不能有空格，file="之间也不能有空格。这样再重启openresty：`service openresty reload`
-然后刷新页面 `http://192.168.1.2` 就能看到把三个文件拼接之后的结果
+然后刷新页面 `http://192.168.1.2` 就能看到把三个文件拼接之后的结果。就是这些边边角角的小功能，在我们系统架构的时候提供了有力的帮助👍
 
+这里还是有问题，文件太多怎么办？所有文件都从磁盘读取，碎片化的文件读写、随机小文件读写就成了系统的IO瓶颈。这时候可以用TMPFS，在openresty
+的这台机器上执行：
+```
+mount -t tmpfs -o size=500m tmpfs /data/tmp
+```
+分配出来一段内存空间，来装磁盘上的文件，把磁盘上的某一个路径映射一下，往里写东西的时候，写在内存里，操作的时候操作内存，load到内存就快了。
+可以认为是虚拟内存。但是这样也有一个问题：文件书太多怎么办？再用ID哈希，做定向流量转发，转发到某几台机器组成的以小组机器，他们内部再作轮询。
+接下来又有问题，如何往这个小组里写数据且保持同步？选项一：一起写，都写完了才算完。选项二：写成功一个就走人，留下他们自己同步。选择第二个，
+原因是三台机器的配置可能不一样，还得实时监控状态，需要开发代码。这样做有点像Redis、zk和kafka。如何实现呢？用Linux自带的做数据备份的软件：
+remote synchronize。几台机器都跑起他来，监控指定的目录中所有文件的变更，它最厉害的一点是它是支持增量修改的，同步速度相对还是比较快的，
+前提是象形电商，文件也不太多，这样就足够了
 
 Thymeleaf、Freemarker、还有JFinal（私活神器，干活太快了，还是国人写的，👍）。JFinal的设计理念在2012-2013年的时候是非常非常先进的，其本质是
 mvc+orm和其他的一些组件。她有一个叫Enjoy的模版引擎，他想翻身就指望这个了。Thymeleaf、Freemarker、Velocity渲染的时候底层借助的是javacc：
 语义、词义、词法的解析器，类似于一个编译器。Enjoy没用javacc，但是它的性能要比前几个高5倍左右，纯靠算法战胜的Freemarker和Thymeleaf，而且
-他是咱们国产的框架，而且咱们还可以不用JFinal，只用Enjoy，不需要导入其他无关的依赖
+他是咱们国产的框架，而且咱们还可以不用JFinal，只用Enjoy，不需要导入其他无关的依赖  
+
+
 
 ### 管理后台
 
