--- a/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
@@ -1,7 +1,7 @@
 # 亿级流量系统多级缓存架构12 电商详情页开发实战
 
 ## 模板引擎的工作原理
-把模板和数据按照语法规则组合到一起生成一个网页的字符串，再把这个字符串输出到浏览器。所以既然能输出到浏览器，也能走IO输出到本地磁盘
+把模板和数据按照语法规则组合到一起生成一个网页的字符串，再把这个字符串输出到浏览器。所以既然能输出到浏览器，也能走IO输出到本地磁盘，作为对将来的缓存
 
 
 ## rsync 
