--- a/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
@@ -24,6 +24,7 @@ yum install -y rsync
 ### 服务端配置
 
 #### 密码文件
+不存在则自己创建
 
 `/etc/rsync.password`
 
@@ -37,7 +38,7 @@ hello:123
 chmod 600 /etc/rsync.password
 ```
 
-
+不存在则自己创建：
 
  `/etc/rsyncd.conf`
 
@@ -67,19 +68,20 @@ path = /usr/local/openresty/nginx/html/
 ```
 
 #### 监控目录
+如果不存在就创建
 
 `mkdir -p /data/www`
 
 #### 启动服务
-
+在有文件的那台机器上执行：
 `rsync --daemon`
 
 
 
 ### 同步数据
-
+在需要文件的机器上执行：
 ```
-rsync -zvaP --password-file=/etc/rsync.password hello@192.168.150.113::www /usr/local/openresty/nginx/html/
+rsync -zvaP --password-file=/etc/rsync.password hello@192.168.1.2::www /usr/local/openresty/nginx/html/
 ```
 
 ### 实时同步
@@ -97,7 +99,7 @@ vi /etc/rsync.password
 ```
 123
 ```
-
+这里跟服务端不一样
 
 
 ## Nginx SSI
