--- a/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
@@ -83,6 +83,7 @@ path = /usr/local/openresty/nginx/html/
 ```
 rsync -zvaP --password-file=/etc/rsync.password hello@192.168.1.2::www /usr/local/openresty/nginx/html/
 ```
+其中 hello是rsync.password中的用户名，www是模块名
 
 ### 实时同步
 
