--- a/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十三 电商详情页开发实战.md
@@ -11,7 +11,7 @@ https://www.samba.org/ftp/rsync/rsync.html
 remote synchronize是一个远程数据同步工具，可通过 LAN/WAN 快速同步多台主机之间的文件。也可以使用 rsync 同步本地硬盘中的不同目录。
 rsync 是用于替代 rcp 的一个工具，rsync 使用所谓的 rsync算法 进行数据同步，这种算法只传送两个文件的不同部分，而不是每次都整份传送，因此速度相当快。
 
-rsync 基于inotify 开发
+rsync 基于 inotify 开发
 
 ## 安装
 
@@ -100,7 +100,33 @@ vi /etc/rsync.password
 ```
 123
 ```
-这里跟服务端不一样
+这里跟服务端不一样   
+
+这里还可以加上增量探测工具模块，变成：
+rsync + inotify-tools 或 rsync+sersync 这就是运维做的事情了，暂略。下面的技术架构是用lvs向nginx做DR模型的负载，只是转发，并不握手
+然后又nginx直接返回数据给客户端。  
+
+对于电商项目，有发布商品，也就是整个电商系统冷启动的时候，填充一些商品数据，可能不太多（数百个吧）。第二个就是在运营中不断添加新数据（商品）
+额外的属性或者数据是通过很多跟商品这个服务或者数据库表相异构的服务拉过来的。各个异构系统过来的数据，比如产品分类、团期模板、价格等怎么展示
+出来？这其实就是额外添加的一些关联的选项。两套方案：1，跟商品放在同一个表里 2、把商品和各个异构数据做关联表
+
+1 冗余字段的好处：读操作效率高，不需要跨表或者跨库的查询
+1 冗余字段的坏处：数据更新会牵扯到一致性的操作
+2 做关联的好处：
+结构清晰、符合数据库设计的原则
+2 做关联的坏处：
+数据量一多了就会造成数据库性能的下降、查询复杂度和延迟提高  
+
+取舍时考量的因素主要是性能，性能要求高就用冗余字段  
+
+添加商品时的流程：
+1 添加/修改商品数据到DB  
+2 把添加的数据写到Redis缓存，Redis缓存的是全量数据（商品个数不能太多，小于1亿个，一般在50万左右），将会被高频访问到  
+3 生成静态html文件（一般是根据Redis数据生成的，包括对于接口的封装，我们一般也不会直接去从DB里面拿数据，html只是展示各种短的，如果要提供
+  一些额外的服务给app，就取Redis里面取数据，在做动态查询的时候，Redis是很有用的。减少一切可能对数据库的访问。当动态的取Redis都扛不住的
+  时候，再去生成html静态文件也就行了。如果是B2C或者B2B，操作数据库的次数就很少）
+
+做不做关联的区别就在这第1步的添加或者修改上，只要商品数不太多就可以这么做
 
 
 ## Nginx SSI
@@ -129,6 +155,14 @@ ssi_types text/html;
 ```shell
 mount -t tmpfs -o size=500m tmpfs /data/tmp/
 ```
+更新文件时，先更新磁盘上的文件，或更新rsync的源。然后设置定时进程，每分钟从磁盘或rsync里将程序同步到tmpfs即可。  
+https://www.cnblogs.com/felixzh/p/9239478.html
+```
+mount -t tmpfs -o size=20m tmpfs /mnt/tmp
+```
+上面这条命令分配了上限为20m的VM到/mnt/tmp目录下，用df命令查看一下，确实/mnt/tmp挂载点显示的大小是20m，但是
+tmpfs一个优点就是它的大小是随着实际存储的容量而变化的，换句话说，假如/mnt/tmp目录下什么也没有，tmpfs并不占用VM。上面的参数20m只是告诉
+内核这个挂载点最大可用的VM为20m，如果不加上这个参数，tmpfs默认的大小是RM的一半，假如你的物理内存是128M，那么tmpfs默认的大小就是64M
 
 
 
