--- a/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
@@ -132,3 +132,12 @@ del大value的时候，或缓存过期后调起的的del操作，会造成线程
 信息的时候能把文字做到图里就做到图里，少写一写字。图的话一个src就搞定
 
 ## 静态数据补偿
+分为同步生成和异步生成，但都需要一个文件生成服务来处理
+
+### 同步生成
+1. 单一文件单一线程。阻塞，耗时
+2. 多线程并行。磁盘IO可能成为瓶颈，这时可以用tmpfs或者分布到多个机器上写。流量太大也不行了，这就需要+限流器RateLimiter，异步
+
+### 异步生成
+可以写到Redis、DB、Kafka、内存。可以把文件标记一下：有没有已经created和他的版本号。往Kafka村的时候，如果发500万个消息，那开销也不小，而且
+Kafka是独立的
