--- a/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
+++ b/亿级流量系统多级缓存架构十二 电商详情页开发实战.md
@@ -139,5 +139,15 @@ del大value的时候，或缓存过期后调起的的del操作，会造成线程
 2. 多线程并行。磁盘IO可能成为瓶颈，这时可以用tmpfs或者分布到多个机器上写。流量太大也不行了，这就需要+限流器RateLimiter，异步
 
 ### 异步生成
-可以写到Redis、DB、Kafka、内存。可以把文件标记一下：有没有已经created和他的版本号。往Kafka村的时候，如果发500万个消息，那开销也不小，而且
-Kafka是独立的
+可以写到Redis、DB、Kafka、内存。可以把文件标记一下：有没有已经created和他的版本号。往Kafka村的时候，如果发500万个消息，那开销也不小，往外投掷这个动作
+还是会有开销。而且Kafka是独立的，只往Kafka里面写IDs和version，这样还是有开销。Redis的情况，要往里面增加key或者结构化的数据（JSON）。数据库不能一次
+update 500万条，也不能一条条的update，一定要分页（细活）
+
+#### 补偿机制
+1. retry。或者加到重试队列里，然后坐定是消费，来保证数据一致性
+2. 定期检查磁盘上有没有文件缺失的情况，但是做一次排查也比较耗时，一般也不允许这么做，或者不允许在忙的时候做。真要是做的时候首先要知道：
+   有多少个文件需要生成、已经生成，是不是存在，是不是需要修改更新。在Redis里面keys这个命令一般在生产环境中会被改名或者禁用，keys会阻塞单线程，
+   其他操作都做不了了，keys items*啥的也不行，O(N)复杂度，无法预估时间。原来有个程序员在生产环境里用了 `keys *` 结果宕机几个小时，
+   直接被开除。用*scan*代替keys就好多了，首先它是异步的，其次，他是基于游标的 http://jinguoxing.github.io/redis/2018/09/04/redis-scan/
+   https://www.cnblogs.com/madashu/p/12832766.html?spm=a2c6h.12873639.0.0.2821409cKFS95J https://developer.aliyun.com/article/770835
+   https://cloud.tencent.com/developer/article/1440487
