--- a/亿级流量系统多级缓存架构十五 静态文件生成方案.md
+++ b/亿级流量系统多级缓存架构十五 静态文件生成方案.md
@@ -37,10 +37,10 @@ chmod 600  /etc/rsync.password
 123
 ```
 
-sersync  的方式监控目录中变化的数据，通过rsync客户端推送给rsync daemon
+sersync  的方式监控目录中变化的数据，通过rsync客户端(源)推送给rsync --daemon（目标）
 
-### 数据源的服务配置
-
+### 数据源(rsync的客户端)的服务配置
+这里源是客户端，推模型，xiangrsync的服务端(启动rsync --daemon的机器)推送被监控目录的改变
 ```
 yum install rsync -y
 vi /etc/rsync.password
@@ -60,6 +60,12 @@ cp sersync2 /opt/sersync/bin
 cp confxml.xml /opt/sersync/conf/
 cd /opt/sersync/conf/
 vi confxml.xml 
+  <sersync>标签下修改：
+        <localpath watch="/usr/local/openresty/nginx/html">
+                    <remote ip="192.168.1.254" name="www"/> //其中www是服务端的路径别名：[www]
+        ...
+         <rsync>
+                <auth start="rtue" users="hello" passwordfile="/etc/rsync.password"/>
 ../bin/sersync2 -d -r -o ./confxml.xml 
 
 cd /data
