--- a/springcloud_notes/笔记.md
+++ b/springcloud_notes/笔记.md
@@ -24,4 +24,12 @@ QPS达不到2000，就直接用业务网关就行，比如SpringCloud Gateway或
 请求其实是向好多台不同的服务器发起的请求。现在就需要把图片、css、js等静态资源都拿出去，我们的系统里只接受tps，这样我们能承受的并发量就高了。
 这样我们做jd的index.html的时候，就是在写<img src="XXX" />的时候指定其他的服务器，这就达到分流的目的了。主页index.html一定是从jd.com过来的，
 只是个html的骨架。在加载图片等资源的时候会访问其他服务器。src里面的服务器可以写死也可以不写死。写死的话，一台图片服务器（CDN）不够用，就要一变多，加LB。
-不同地点的用户还是要经过动态域名解析，访问到不同地点的图片服务器集群机房。CDN服务器还做另外一件事：做各个机房图片等静态数据的同步。
+不同地点的用户还是要经过动态域名解析，访问到不同地点的图片服务器集群机房。CDN服务器还做另外一件事：做各个服务器上图片等静态数据的同步，找一个
+大管家（服务）来接受数据和分发，读取的时候要向源服务器拉资源，要定制资源和服务器列表等，不难。总之就是静态流量的LB。静态文件集群，比如FastDFS，
+用来存储用户上传上来的一些数据，比如头像、视频、音频等文件。其中的数据会被拉取到各个CDN服务器。LVS就是由动态DNS来做的负载均衡，来保证IP地址有多个，
+但是域名只有一个。  
+
+简单的httpsDNS原理： 用户发请求，想要一个域名的IP，也就是想一个DNS的IP地址发送一个域名，这个DNS会根据这个域名返回其对应的IP地址。自己搭这么个
+服务器可以防劫持。这个DNS的IP地址用户必须事先知道，即使是wifi家用路由器，也是在连上网之后运营商下发的DNS服务器的IP地址。也就是说必须得先有一个
+DNS服务器才能够去解析域名，而且用户也得知道这个DNS服务器的IP，所以可以知道这种httpsDNS不适合做这种基于浏览器、直接和web用户打交道的项目。它只适合
+基于App/有客户端的后端架构，这样可以加快解析速度，同时避免被劫持。泛域名解析：
