--- a/springcloud_notes/笔记.md
+++ b/springcloud_notes/笔记.md
@@ -32,4 +32,10 @@ QPS达不到2000，就直接用业务网关就行，比如SpringCloud Gateway或
 简单的httpsDNS原理： 用户发请求，想要一个域名的IP，也就是想一个DNS的IP地址发送一个域名，这个DNS会根据这个域名返回其对应的IP地址。自己搭这么个
 服务器可以防劫持。这个DNS的IP地址用户必须事先知道，即使是wifi家用路由器，也是在连上网之后运营商下发的DNS服务器的IP地址。也就是说必须得先有一个
 DNS服务器才能够去解析域名，而且用户也得知道这个DNS服务器的IP，所以可以知道这种httpsDNS不适合做这种基于浏览器、直接和web用户打交道的项目。它只适合
-基于App/有客户端的后端架构，这样可以加快解析速度，同时避免被劫持。泛域名解析：
+基于App/有客户端的后端架构，这样可以加快解析速度，同时避免被劫持。泛域名解析：*。  
+
+Webflux是用来替代Websocket的，或者在Servlet中做的话，非常消耗性能。本来Servlet就是个非常重量级的组件， Tomcat扛不住太多的连接，跟这个Servlet
+也有至关重要的关系，因为Tomcat本质上就实现了Servlet的标准。而用Webflux就特别轻量级，想推送就推送，因为是基于netty的（游戏服务器甚至可以直接接netty，
+不走http请求）。  
+
+Actuator是提供服务的监控的，或者叫监控断点。我们如何知道一个微服务集群的负载量比较高？总不能登录到某台机器上看他的JVM堆栈信息吧？
