--- a/springcloud_notes/笔记.md
+++ b/springcloud_notes/笔记.md
@@ -38,4 +38,12 @@ Webflux是用来替代Websocket的，或者在Servlet中做的话，非常消耗
 也有至关重要的关系，因为Tomcat本质上就实现了Servlet的标准。而用Webflux就特别轻量级，想推送就推送，因为是基于netty的（游戏服务器甚至可以直接接netty，
 不走http请求）。  
 
-Actuator是提供服务的监控的，或者叫监控断点。我们如何知道一个微服务集群的负载量比较高？总不能登录到某台机器上看他的JVM堆栈信息吧？
+Actuator是提供服务的监控的，或者叫监控断点。我们如何知道一个微服务集群的负载量比较高？总不能登录到某台机器上看他的JVM堆栈信息吧？Actuator就相当于在
+服务内部放了一根探针，探测有多少个线程、多少网络连接、内存使用状况等。可以把Actuator整合到admin（相当于Dubbo里的Monitor）里，甚至可以在资源利用率
+不高的时候，关掉一些机器。  
+
+RestTemplate、Feign、OpenFeign都会发出http请求，请求一次发一次，所以性能上来说稍微差一点点。Dubbo 的RPC是长连接。OpenFeign是有一步（响应式）编程
+在里面的，她还是略高端的，重点学，看她的源码。  
+
+啥时候该用SpringCloud？1.模块多 2.并发量高  
+服务是拆还是不拆？拆完了之后用不用微服务？大项目肯定要拆，然后决定用哪种治理服务的组件框架。现在就是选SpringCloud就好
