--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -19,7 +19,7 @@ Windows:.\kibana.bat
 -  安装:依赖于node和grunt管理理⼯工具
 -  启动:npm run start
 -  验证:http://localhost:9100/  
-   参考：https://www.jianshu.com/p/6102cffc96f1
+   参考：https://www.jianshu.com/p/6102cffc96f1, 只不过执行 npm install的时候会出错，用 `npm install  --unsafe-perm` 即可 
 - 集群健康值:
 ##  健康值检查
 -  _cat/health
