--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -18,7 +18,7 @@ Windows:.\kibana.bat
 -  下载:https://github.com/mobz/elasticsearch-head同时课件中 也提供了了安装包。
 -  安装:依赖于node和grunt管理理⼯工具
 -  启动:npm run start
--  验证:http://localhost:9100/  
+-  验证:http://localhost:9100/ 注意：要用Chrome打开，Sarfari会卡住！！！！！！ 
    参考：https://www.jianshu.com/p/6102cffc96f1, 只不过执行 npm install的时候会出错，用 `npm install  --unsafe-perm` 即可 
 - 集群健康值:
 ##  健康值检查
