--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -9,16 +9,17 @@
 -  开发模式:默认配置(未配置发现设置)，⽤用于学习阶段 -  ⽣生产模式:会触发ES的引导检查，学习阶段不不建议修改集 群相关的配置。
 ##  安装Kibana(从版本- - 0开始，Kibana仅⽀支持64位操作系统。)
 -  下载:http://elastic.co
--  启动:依然是开箱即⽤用
-Linux:./kibana
+-  启动:依然是开箱即⽤ 
+Linux: bin/kibana 不想看不断打印日志就：  
+          `bin/kibana 1>/dev/null`
 Windows:.\kibana.bat
--  验证:localhost:5601
+-  验证:localhost:5601 注意⚠️：要用Chrome打开，Sarfari会卡住！！！！！！
 ##  安装Head插件(选装):
 -  介绍:提供可视化的操作⻚页⾯面对ElasticSearch搜索引擎进⾏行行各 种设置和数据检索功能，可以很直观的查看集群的健康状况，索引 分配情况，还可以管理理索引和集群以及提供⽅方便便快捷的搜索功能等 等。
 -  下载:https://github.com/mobz/elasticsearch-head同时课件中 也提供了了安装包。
 -  安装:依赖于node和grunt管理理⼯工具
 -  启动:npm run start
--  验证:http://localhost:9100/ 注意⚠️：要用Chrome打开，Sarfari会卡住！！！！！！ 
+-  验证:http://localhost:9100/  
    参考：https://www.jianshu.com/p/6102cffc96f1, 只不过执行 npm install的时候会出错，用 `npm install  --unsafe-perm` 即可 
 - 集群健康值:
 ##  健康值检查
