--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -49,7 +49,8 @@ ES分布式⽂文档系统 - ES如何实现⾼高可⽤用(⽣生产环境均为
 -  傻X的代码你能看懂，⽜牛X的代码你也能看懂
 -  只能看懂⾃自⼰己的代码，容错性低
 -  PS:各种情况(⽀支持的情况越多，容错性越好)下，都能保证 work 正常运⾏行行
--  换到咱们ES上就是，就是在局部出错异常的情况下，保证服务 正常运⾏行行并且有⾃自⾏行行恢复能⼒力力。
+-  换到咱们ES上就是，就是在局部出错异常的情况下，保证服务 正常运⾏行行并且有⾃自⾏行行恢复能⼒力力。主挂了之后集群会自动Raft选主，然后继续提供服务。原来的主再次启动，
+   则不会抢回主的地位，且整个集群会重新调整分片的分布。意外亲测有效
 ##  ES-node - 
 -  Master:主节点，每个集群都有且只有⼀一个 a. 尽量量避免Master节点 node.data = true
 -  voting:投票节点
