--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -3,7 +3,7 @@
 ### 安装六字箴⾔言:
 -  JDK->依赖
 -  下载->elastic.co
--  启动->./elasticsearch -d
+-  启动->./elasticsearch -d （每台上面都执行）  
 -  验证->http://localhost:9200/
 -  开发模式和⽣生产模式
 -  开发模式:默认配置(未配置发现设置)，⽤用于学习阶段 -  ⽣生产模式:会触发ES的引导检查，学习阶段不不建议修改集 群相关的配置。
@@ -20,7 +20,7 @@ Windows:.\kibana.bat
 -  下载:https://github.com/mobz/elasticsearch-head同时课件中 也提供了了安装包。
 -  安装:依赖于node和grunt管理理⼯工具
 -  启动:npm run start
--  验证:http://localhost:9100/  
+-  验证:http://localhost:9100/   http://192.168.1.28:9100  
    参考：https://www.jianshu.com/p/6102cffc96f1, 只不过执行 npm install的时候会出错，用 `npm install  --unsafe-perm` 即可 
 - 集群健康值:
 ##  健康值检查
