--- a/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
+++ b/ES_notes/2.环境安装、容灾机制-Master选举、健康值检查以及CRUD.md
@@ -47,7 +47,7 @@ ES分布式⽂文档系统 - ES如何实现⾼高可⽤用(⽣生产环境均为
 
 ## 容错机制
 ###  啥叫容错?
--  傻X的代码你能看懂，⽜牛X的代码你也能看懂
+-  傻X的代码你能看懂，⽜X的代码你也能看懂
 -  只能看懂⾃自⼰己的代码，容错性低
 -  PS:各种情况(⽀支持的情况越多，容错性越好)下，都能保证 work 正常运⾏行行
 -  换到咱们ES上就是，就是在局部出错异常的情况下，保证服务 正常运⾏行行并且有⾃自⾏行行恢复能⼒力力。主挂了之后集群会自动Raft选主，然后继续提供服务。原来的主再次启动，
